修改用没有废除的方法 getDeclaredConstructor catch合并